feat: first implementation of world publishing service
