# internal/world-service/dtos/requests_dto.go
@@ -1,0 +1,9 @@
+package dtos
+
+import "encoding/json"
+
+// WorldDataRequest represents the request payload for updating world information.
+type WorldRequest struct {
+	Name string          `json:"name"`
+	Data json.RawMessage `json:"data" swaggertype:"object"`
+}
