# internal/world-service/dtos/responses_dto.go
@@ -1,0 +1,25 @@
+package dtos
+
+import "time"
+
+// WorldDataRequest represents the request payload for updating world information.
+
+// WorldResponse represents the response payload for retrieving world information.
+type WorldResponse struct {
+	UserId    string    `json:"user_id"`
+	Name      string    `json:"name"`
+	Data      string    `json:"data"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
+}
+
+type WorldPublishResponse struct {
+	Response string `json:"response"`
+}
+
+type WorldsListResponse struct {
+	Worlds []WorldResponse `json:"worlds"`
+	Total  int             `json:"amount"`
+	Limit  int             `json:"limit"`
+	Offset int             `json:"offset"`
+}
